Shadowchats.ApiGateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: shadowchats
spec:
  selector:
    app: api-gateway
  ports:
    - port: 80
      targetPort: 5000
      protocol: TCP
      name: http
  type: ClusterIP
